[workspace]
members = ["lib", "command", "bin", "e2e"]
resolver = "2" # consistent with rust edition 2024, see https://doc.rust-lang.org/cargo/reference/resolver.html#features

[workspace.dependencies]
anyhow = "^1.0.102"
clap = "^4.5.60"
cookie-factory = "^0.3.3"
futures = "^0.3.32"
hdrhistogram = "^7.5.4"
hex = "^0.4.3"
loona-hpack = "^0.4.3"
http-body-util = "^0.1"
hyper = "^1.8.1"
hyper-rustls = { version = "^0.27.7", default-features = false }
hyper-util = "^0.1"
idna = "^1.1.0"
itoa = "^1.0.17"
jemallocator = "^0.5.4"
kawa = { version = "^0.6.8", default-features = false }
libc = "^0.2.182"
log = "^0.4.29"
memchr = "^2.8.0"
mio = "^1.1.1"
nix = "0.31.2"
nom = "^7.1.3"
num_cpus = "^1.17.0"
paw = "^1.0.0"
pool = "^0.1.4"
poule = "^0.3.2"
prettytable-rs = { version = "^0.10.0", default-features = false }
prost = "^0.14.3"
prost-build = "^0.14.3"
criterion = { version = "^0.5.1", features = ["html_reports"] }
quickcheck = "^1.1.0"
rand = "^0.10.0"
regex = "^1.12.3"
rustls-pemfile = "^2.2.0"
rustls = { version = "^0.23.37", default-features = false, features = [
  "ring",
  "logging",
  "std",
  "tls12",
] }
rusty_ulid = "^2.0.0"
serde = "^1.0.228"
serde_json = "^1.0.149"
serial_test = "^3.4.0"
sha2 = "^0.10.9"
slab = "^0.4.12"
socket2 = "^0.6.3"
sozu-command-lib = { version = "^1.1.1", path = "command" }
sozu-lib = { version = "^1.1.1", path = "lib" }
tempfile = "^3.26.0"
termion = "^4.0.6"
thiserror = "^2.0.18"
time = "^0.3.44"
tiny_http = "^0.12.0"
tokio = "^1.50.0"
toml = { version = "^1.0.4", features = ["preserve_order"] }
trailer = "^0.1.2"
x509-parser = "^0.18.1"

[profile.release]
lto = true
codegen-units = 1
debug = true
