[workspace]
members = ["lib", "command", "bin", "e2e"]
resolver = "2" # consistent with rust edition 2024, see https://doc.rust-lang.org/cargo/reference/resolver.html#features

[workspace.dependencies]
anyhow = "^1.0.102"
base64 = "^0.22.1"
clap = "^4.6.1"
cookie-factory = "^0.3.3"
flate2 = "^1.1"
futures = "^0.3.32"
hdrhistogram = "^7.5.4"
hex = "^0.4.3"
loona-hpack = "^0.4.3"
http-body-util = "^0.1.3"
hyper = "^1.9.0"
hyper-rustls = { version = "^0.27.9", default-features = false }
hyper-util = "^0.1.20"
idna = "^1.1.0"
itoa = "^1.0.18"
jemallocator = "^0.5.4"
kawa = { version = "^0.6.8", default-features = false }
libc = "^0.2.185"
log = "^0.4.29"
memchr = "^2.8.0"
mio = "^1.2.0"
nix = "^0.31.2"
nom = "^7.1.3"
num_cpus = "^1.17.0"
paw = "^1.0.0"
pool = "^0.1.4"
poule = "^0.3.2"
prettytable-rs = { version = "^0.10.0", default-features = false }
prost = "^0.14.3"
prost-build = "^0.14.3"
criterion = { version = "^0.5.1", features = ["html_reports"] }
quickcheck = "^1.1.0"
rand = "^0.10.1"
regex = "^1.12.3"
rustls-openssl = { version = "^0.3.0", default-features = false, features = ["tls12"] }
rustls = { version = "^0.23.38", default-features = false, features = [
  "logging",
  "std",
  "tls12",
] }
rusty_ulid = "^2.0.0"
serde = "^1.0.228"
serde_json = "^1.0.149"
serial_test = "^3.4.0"
sha2 = "^0.11.0"
slab = "^0.4.12"
socket2 = "^0.6.3"
sozu-command-lib = { version = "^1.1.1", path = "command" }
sozu-lib = { version = "^1.1.1", path = "lib", default-features = false }
subtle = "^2.6.1"
tempfile = "^3.27.0"
termion = "^4.0.6"
thiserror = "^2.0.18"
time = "^0.3.47"
tiny_http = "^0.12.0"
tokio = "^1.52.1"
toml = { version = "^1.1.2", features = ["preserve_order"] }
x509-parser = "^0.18.1"

# Dependencies for the `sozu top` TUI subcommand. All gated behind the
# opt-in `tui` Cargo feature on `bin/`; default `sozu` builds do not pull
# any of them in. Versions pinned 2026-05-10 against crates.io HEAD; bump
# the patch component locally if cargo update lands a fix.
color-eyre           = "^0.6.5"
crossbeam-channel    = "^0.5.15"
crossterm            = { version = "^0.29.0", default-features = false }
ctrlc                = "^3.4.5"
ratatui              = { version = "^0.30.0", default-features = false }
throbber-widgets-tui = "^0.11.0"
tui-big-text         = "^0.8.4"
tui-input            = "^0.15.3"
tui-popup            = "^0.7.4"
tui-scrollview       = "^0.6.4"
tui-tree-widget      = "^0.24.0"

[profile.release]
lto = true
codegen-units = 1
debug = true
