[package]
name = "sozu-command-lib"
description = "configuration library to command a sozu instance"
repository = "https://github.com/sozu-proxy/sozu"
readme = "README.md"
documentation = "https://docs.rs/sozu-command-lib"
homepage = "https://sozu.io"
version = "1.1.1"
license = "LGPL-3.0"
authors = [
  "Geoffroy Couprie <geo.couprie@gmail.com>",
  "Eloi Demolis <eloi.demolis@clever-cloud.com>",
  "Emmanuel Bosquet <emmanuel.bosquet@clever-cloud.com>",
  "Florentin Dubois <florentin.dubois@clever-cloud.com>",
]
categories = ["network-programming"]
edition = "2024"
rust-version = "1.88.0"
include = [
  "./README.md",
  "Cargo.toml",
  "src/**/*",
  "assets/certificate.pem",
  "assets/key.pem",
  "assets/404.html",
  "assets/503.html",
]

[dependencies]
hex = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
memchr = { workspace = true }
mio = { workspace = true, features = ["os-poll", "net"] }
nix = { workspace = true, features = ["socket", "uio"] }
nom = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rusty_ulid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
prettytable-rs = { workspace = true }
pool = { workspace = true }
poule = { workspace = true }
thiserror = { workspace = true }
x509-parser = { workspace = true }

[features]
unstable = []
logs-debug = []
logs-trace = []

[dev-dependencies]
# Used by `sd_notify` unit tests to spawn an ephemeral
# `UnixDatagram` socket and assert the helper writes the expected
# protocol payload.
tempfile = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
