[package]
name = "sozuctl"
description = "command line application to configure a sozu instance"
repository = "https://github.com/sozu-proxy/sozu"
readme = "README.md"
documentation = "https://docs.rs/sozuctl"
homepage = "http://sozu.io"
version = "0.11.0"
license = "AGPL-3.0"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]
categories = ["network-programming"]

[[bin]]
name = "sozuctl"

[dependencies]
rand    = "^0.6"
prettytable-rs = { version = "^0.8", default-features = false}
sozu-command-lib = { version = "^0.11", path = "../command" }
structopt = "^0.2"
structopt-derive = "^0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[features]
unstable = []

[badges]
travis-ci = { repository = "sozu-proxy/sozu" }
