[package]
name = "sozuctl"
description = "command line application to configure a sozu instance"
repository = "https://github.com/sozu-proxy/sozu"
readme = "README.md"
documentation = "https://docs.rs/sozuctl"
homepage = "http://sozu.io"
version = "0.11.48"
license = "AGPL-3.0"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]
categories = ["network-programming"]
edition = 2018

[[bin]]
name = "sozuctl"

[dependencies]
rand    = "^0.7"
prettytable-rs = { version = "^0.8", default-features = false}
sozu-command-lib = { version = "^0.11", path = "../command" }
structopt = "^0.3"
serde = { version= "1.0", features=["derive"]}
serde_json = "1.0"
hex = "^0.4"

[features]
unstable = []
logs-debug = ["sozu-command-lib/logs-debug"]
logs-trace = ["sozu-command-lib/logs-trace"]

[badges]
travis-ci = { repository = "sozu-proxy/sozu" }
