[package]
name = "sozu-e2e"
version = "1.1.1"
rust-version = "1.85.0"
edition = "2024"

[dependencies]
futures = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client", "server", "http1", "http2"] }
hyper-rustls = { workspace = true, features = ["ring", "webpki-tokio", "http1", "http2", "tls12", "logging"] }
hyper-util = { workspace = true, features = ["client-legacy", "http1", "http2", "server-auto", "service", "tokio"] }
libc = { workspace = true }
mio = { workspace = true }
rustls = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time"] }

sozu-command-lib = { workspace = true }
sozu-lib = { workspace = true }
