[package]
name = "sozu-e2e"
version = "1.1.1"
rust-version = "1.88.0"
edition = "2024"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(tarpaulin)"]

[dependencies]
base64 = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client", "server", "http1", "http2"] }
hyper-rustls = { workspace = true, features = ["ring", "webpki-tokio", "http1", "http2", "tls12", "logging"] }
hyper-util = { workspace = true, features = ["client-legacy", "http1", "http2", "server-auto", "service", "tokio"] }
libc = { workspace = true }
mio = { workspace = true }
rustls = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time"] }

sozu-command-lib = { workspace = true }
sozu-lib = { workspace = true, features = ["e2e-hooks", "crypto-ring"] }
tempfile = { workspace = true }

[dev-dependencies]
# Serialise tests that share global state (e.g. the e2e-hooks
# `FORCE_NEW_H2_CLIENT_FAILURE` `AtomicBool` consumed by both
# `e2e_session_router_connect_failure_no_leak` and
# `e2e_session_stream_id_exhaustion_graceful`). Without this, the
# default `cargo test` parallel scheduler can let the FIX-22 smoke
# request consume the failure injection that FIX-18 just armed,
# producing the wrong response code for both tests on CI.
serial_test = { workspace = true }

[features]
# Forward sozu-lib's `splice` feature so the dependency-tree compiles
# the splice integration in `lib/src/protocol/pipe.rs`. The TCP tests
# in `tests/tcp_tests.rs` are protocol-level and run identically with
# or without the feature enabled — CI exercises both configurations.
splice = ["sozu-lib/splice"]
# Crypto-provider forwarding so `cargo test -p sozu-e2e --features
# crypto-aws-lc-rs` etc. exercises the matrix end-to-end.
crypto-aws-lc-rs = ["sozu-lib/crypto-aws-lc-rs"]
crypto-openssl = ["sozu-lib/crypto-openssl"]
fips = ["sozu-lib/fips"]
