[package]
name = "sozu-command-futures"
description = "configuration library to command a sozu instance"
repository = "https://github.com/sozu-proxy/sozu"
readme = "README.md"
documentation = "https://docs.rs/sozu-command-futures"
homepage = "http://sozu.io"
version = "0.11.0"
license = "AGPL-3.0"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]
categories = ["network-programming"]

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*",
]

[lib]

[dependencies]
log = "^0.4"
bytes = "^0.4"
futures = "^0.1"
tokio-codec = "^0.1"
tokio-uds = "^0.2"
serde = "^1.0.2"
serde_json = "^1.0.1"
sozu-command-lib = {version = "^0.11", path = "../command" }

[dev-dependencies]
tokio-core = "^0.1"
env_logger = "^0.6"
