[package]
name = "sozu-command-futures"
description = "configuration library to command a sozu instance"
repository = "https://github.com/sozu-proxy/sozu"
readme = "README.md"
documentation = "https://docs.rs/sozu-command-futures"
homepage = "http://sozu.io"
version = "0.13.6"
license = "AGPL-3.0"
edition = "2018"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]
categories = ["network-programming"]

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*",
]

[lib]

[dependencies]
log = "^0.4"
bytes = "^1"
futures = "^0.3"
tokio = { version="1.0", features = [ "net" ] }
tokio-util = { version = "0.6", features = [ "codec" ] }
serde = "^1.0.2"
serde_json = "^1.0.1"
sozu-command-lib = {version = "^0.13.0", path = "../command" }

[dev-dependencies]
tokio = { version="1.0", features = [ "full" ] }
env_logger = "^0.9"
