[package]
name = "sozu-command-futures"
description = "configuration library to command a sozu instance"
repository = "https://github.com/sozu-proxy/sozu"
readme = "README.md"
documentation = "https://docs.rs/sozu-command-futures"
homepage = "http://sozu.io"
version = "0.13.6"
license = "AGPL-3.0"
edition = "2018"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]
categories = ["network-programming"]

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*",
]

[dependencies]
bytes = "^1.1.0"
futures = "^0.3.21"
log = "^0.4.16"
tokio = { version="^1.17.0", features = [ "net" ] }
tokio-util = { version = "^0.7.1", features = [ "codec" ] }
serde = "^1.0.136"
serde_json = "^1.0.79"
sozu-command-lib = { path = "../command" }

[dev-dependencies]
tokio = { version="^1.17.0", features = [ "full" ] }
env_logger = "^0.9.0"
