[package]
name = "sozu-fuzz"
version = "2.0.2"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "^0.4.12"
loona-hpack = "^0.4.3"
sozu-lib = { path = "../lib", default-features = false, features = ["crypto-ring"] }

# Prevent this from joining the workspace
[workspace]

[[bin]]
name = "fuzz_frame_parser"
path = "fuzz_targets/fuzz_frame_parser.rs"
doc = false

[[bin]]
name = "fuzz_hpack_decoder"
path = "fuzz_targets/fuzz_hpack_decoder.rs"
doc = false

[[bin]]
name = "fuzz_udp_flow"
path = "fuzz_targets/fuzz_udp_flow.rs"
doc = false
