[package]
name = "sozu-lib"
description = "sozu library to build hot reconfigurable HTTP reverse proxies"
repository = "https://github.com/sozu-proxy/sozu"
readme = "README.md"
documentation = "https://docs.rs/sozu-lib"
homepage = "https://sozu.io"
version = "2.0.0"
license = "AGPL-3.0"
authors = [
  "Clément Delafargue <clement@delafargue.name>",
  "Geoffroy Couprie <geo.couprie@gmail.com>",
  "Eloi Demolis <eloi.demolis@clever-cloud.com>",
  "Emmanuel Bosquet <emmanuel.bosquet@clever-cloud.com>",
  "Florentin Dubois <florentin.dubois@clever-cloud.com>",
]
categories = ["network-programming"]
edition = "2024"
rust-version = "1.88.0"
include = [
  "./README.md",
  "Cargo.toml",
  "build.rs",
  "log_scanner.rs",
  "src/**/*",
  "/examples/*",
  "benches/**/*",
  "assets/certificate.pem",
  "assets/certificate_chain.pem",
  "assets/key.pem",
]

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
cookie-factory = { workspace = true }
hdrhistogram = { workspace = true }
hex = { workspace = true }
loona-hpack = { workspace = true }
idna = { workspace = true }
itoa = { workspace = true }
kawa = { workspace = true }
libc = { workspace = true }
memchr = { workspace = true }
mio = { workspace = true, features = ["os-poll", "os-ext", "net"] }
nom = { workspace = true, features = ["std"] }
poule = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rustls = { workspace = true }
rustls-openssl = { workspace = true, optional = true }
rusty_ulid = { workspace = true }
sha2 = { workspace = true }
slab = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
subtle = { workspace = true }
thiserror = { workspace = true }

sozu-command-lib = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
quickcheck = { workspace = true }
rand = { workspace = true }
serial_test = { workspace = true }
tiny_http = { workspace = true }

[[bench]]
name = "header_formatting"
harness = false

[[bench]]
name = "h2_scheduling"
harness = false

[[bench]]
name = "crypto_provider"
harness = false

[features]
# `crypto-ring` is enabled by default so `cargo {build,test} -p sozu-lib`
# (no explicit features) compiles out of the box. Downstream binaries
# already override via their own `default = ["crypto-ring", ...]` entries
# in `bin/Cargo.toml`. CI matrix jobs pass `--no-default-features
# --features <provider>` to pick a specific provider. When several
# provider features are enabled at once (e.g. `cargo doc --all-features`,
# or `cargo build --features fips` layered on top of the default
# `crypto-ring`), the precedence chain in `lib/src/crypto.rs`
# (`fips > ring > aws-lc-rs > openssl`) selects deterministically.
# `fips` always wins so a `--features fips` binary genuinely runs
# aws-lc-rs in FIPS mode rather than silently falling back to ring.
default = ["crypto-ring"]
# Exposes `#[cfg(any(test, feature = "e2e-hooks"))]` test-injection APIs in
# the mux layer (`Connection::new_h2_client` pool-failure injection,
# `ConnectionH2::__test_set_last_stream_id`). Consumed by the `sozu-e2e`
# crate so integration tests can drive FIX-18 / FIX-22 recipes without
# starving the buffer pool or issuing 2³¹ real requests. Must NOT be
# enabled in production builds.
e2e-hooks = []
# Compile-time crypto provider selection. At least one of crypto-ring /
# crypto-aws-lc-rs / crypto-openssl must be enabled; lib/src/crypto.rs
# emits compile_error! when none are. When several are enabled at once
# (notably under `cargo build --all-features` or when `--features fips`
# is layered on top of the default `crypto-ring`), the precedence chain
# in crypto.rs (`fips > ring > aws-lc-rs > openssl`) selects
# deterministically. `fips` implies crypto-aws-lc-rs and enables
# rustls's FIPS profile via aws-lc-rs's FIPS build (see rustls-0.23.38
# Cargo.toml: fips = [aws_lc_rs, aws-lc-rs?/fips]); because `fips` wins
# the chain, a `--features fips` binary always runs aws-lc-rs in FIPS
# mode regardless of which other provider features are simultaneously
# enabled.
crypto-ring = ["rustls/ring"]
crypto-aws-lc-rs = ["rustls/aws-lc-rs"]
crypto-openssl = ["dep:rustls-openssl"]
fips = ["crypto-aws-lc-rs", "rustls/fips"]
logs-debug = []
logs-trace = []
opentelemetry = []
simd = ["kawa/simd"]
splice = []
tolerant-http1-parser = ["kawa/tolerant-parsing"]

[badges]
travis-ci = { repository = "sozu-proxy/sozu" }
