[package]
name = "yxorp-bin"
version = "0.1.0"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]

[dependencies]
log = "0.3"
env_logger = "0.3"
mio = "~0.5.0"
rustc-serialize = "^0.3.15"
serde = "~0.7"
serde_json = "~0.7"
serde_macros = "~0.7"
nom = "~1.2.0"
toml = "~0.1"

[dependencies.yxorp]
path = ".."
